--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_C_STANDARD 11)
 # Füge die Unterverzeichnisse für StringLib und LinkedList hinzu
 add_subdirectory(StringLib)
 add_subdirectory(List)
+add_subdirectory(TimeLib)
 
 # Füge eine CombinedLib hinzu, die StringLib und LinkedList bündelt
 add_library(CombinedLib INTERFACE)
 
 # Füge StringLib und LinkedList als Abhängigkeiten für CombinedLib hinzu
-target_link_libraries(CombinedLib INTERFACE StringLib List)
+target_link_libraries(CombinedLib INTERFACE StringLib List TimeLib)
 
 add_executable(LinkedList main.c)
 target_link_libraries(LinkedList PRIVATE CombinedLib)
